# modelling-of-physical-systems

./: .gitignore  lab_01.ipynb  pyproject.toml
.github/workflows/: generate_lab_01_pdf.yml  generate_pdf.yml
lab01/: pint_and_plotting.ipynb
lab02/: lab02.ipynb
lab03/: advection_upwind.ipynb  assignment.txt
lab04/: assignment.txt  diffusion_upwind.ipynb
lab05/: advection_mpdata.ipynb  assignment.txt
lab06/: assignment.txt  stochasticadv.ipynb
lab07/: assignment.txt  sdm.ipynb
