[project]
name = "modelling-of-physical-systems"
version = "0.1.0"
description = "Modelling of Physical Systems laboratory classes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "nbconvert>=7.16.6",
    "nbqa>=1.9.1",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "open-atmos-jupyter-utils>=1.3.0",
    "pandas>=2.2.3",
    "pint>=0.24.4",
    "pylint>=3.3.7",
    "scipy>=1.15.2",
]
